y.output
   0  $accept : file $end

   1  $$1 :

   2  file : PROGRAM decls START $$1 main END
   3       | MODULE decls END

   4  decls :
   5        | gdecls

   6  gdecls : gdecls ';' decl
   7         | decl

   8  decl : qualif const vardecl

   9  $$2 :

  10  $$3 :

  11  decl : FUNCTION qualif ftype ID $$2 fvars $$3 eqbody

  12  $$4 :

  13  decl : FUNCTION qualif ftype ID $$4 eqbody
  14       | error

  15  fvar : NUMBER ID
  16       | STRING ID
  17       | ARRAY ID vdim

  18  fvars : fvar
  19        | fvars ';' fvar

  20  vardecl : NUMBER ID eqint
  21          | STRING ID eqstr
  22          | ARRAY ID vdim eqvec

  23  vdim : '[' INT ']'
  24       |

  25  qualif : PUBLIC
  26         | FORWARD
  27         |

  28  const : CONST
  29        |

  30  type : NUMBER
  31       | STRING
  32       | ARRAY

  33  ftype : type
  34        | VOID

  35  eqint :
  36        | EQ INT
  37        | EQ '-' INT

  38  eqstr :
  39        | EQ chars

  40  chars : char
  41        | chars char

  42  char : INT
  43       | CHAR
  44       | STR

  45  eqvec :
  46        | EQ ints

  47  ints : INT
  48       | '-' INT
  49       | ints ',' INT
  50       | ints ',' '-' INT

  51  eqbody : DONE
  52         | DO body

  53  main : fvars ';' instrs
  54       | instrs

  55  body : fvars ';' instrs ret
  56       | instrs ret

  57  ret : RETURN
  58      | RETURN expr
  59      |

  60  loop : ret
  61       | REPEAT
  62       | STOP

  63  block : instrs loop

  64  instrs :
  65         | instrs instr

  66  instr : IF expr THEN block elifs else FI

  67  $$5 :

  68  instr : FOR expr UNTIL expr STEP expr DO $$5 block DONE
  69        | expr '!'
  70        | expr ';'
  71        | lval '#' expr ';'

  72  elifs :
  73        | elifs ELIF expr THEN block

  74  else :
  75       | ELSE block

  76  lval : ID
  77       | ID '[' expr ']'

  78  expr : chars
  79       | lval
  80       | '?'
  81       | '&' lval
  82       | '(' expr ')'
  83       | expr '+' expr
  84       | expr '-' expr
  85       | expr '*' expr
  86       | expr '/' expr
  87       | expr '%' expr
  88       | expr '^' expr
  89       | expr '=' expr
  90       | expr NE expr
  91       | expr GE expr
  92       | expr LE expr
  93       | expr '<' expr
  94       | expr '>' expr
  95       | expr '&' expr
  96       | expr '|' expr
  97       | '~' expr
  98       | '-' expr
  99       | lval EQ expr
 100       | ID '(' exprs ')'

 101  exprs : expr
 102        | exprs ',' expr

state 0
	$accept : . file $end  (0)

	PROGRAM  shift 1
	MODULE  shift 2
	.  error

	file  goto 3


state 1
	file : PROGRAM . decls START $$1 main END  (2)
	decls : .  (4)
	qualif : .  (27)

	error  shift 4
	PUBLIC  shift 5
	FORWARD  shift 6
	FUNCTION  shift 7
	STRING  reduce 27
	NUMBER  reduce 27
	ARRAY  reduce 27
	CONST  reduce 27
	START  reduce 4

	decls  goto 8
	gdecls  goto 9
	decl  goto 10
	qualif  goto 11


state 2
	file : MODULE . decls END  (3)
	decls : .  (4)
	qualif : .  (27)

	error  shift 4
	PUBLIC  shift 5
	FORWARD  shift 6
	FUNCTION  shift 7
	END  reduce 4
	STRING  reduce 27
	NUMBER  reduce 27
	ARRAY  reduce 27
	CONST  reduce 27

	decls  goto 12
	gdecls  goto 9
	decl  goto 10
	qualif  goto 11


state 3
	$accept : file . $end  (0)

	$end  accept


state 4
	decl : error .  (14)

	.  reduce 14


state 5
	qualif : PUBLIC .  (25)

	.  reduce 25


state 6
	qualif : FORWARD .  (26)

	.  reduce 26


state 7
	decl : FUNCTION . qualif ftype ID $$2 fvars $$3 eqbody  (11)
	decl : FUNCTION . qualif ftype ID $$4 eqbody  (13)
	qualif : .  (27)

	PUBLIC  shift 5
	FORWARD  shift 6
	STRING  reduce 27
	NUMBER  reduce 27
	ARRAY  reduce 27
	VOID  reduce 27

	qualif  goto 13


state 8
	file : PROGRAM decls . START $$1 main END  (2)

	START  shift 14
	.  error


state 9
	decls : gdecls .  (5)
	gdecls : gdecls . ';' decl  (6)

	';'  shift 15
	END  reduce 5
	START  reduce 5


state 10
	gdecls : decl .  (7)

	.  reduce 7


state 11
	decl : qualif . const vardecl  (8)
	const : .  (29)

	CONST  shift 16
	STRING  reduce 29
	NUMBER  reduce 29
	ARRAY  reduce 29

	const  goto 17


state 12
	file : MODULE decls . END  (3)

	END  shift 18
	.  error


state 13
	decl : FUNCTION qualif . ftype ID $$2 fvars $$3 eqbody  (11)
	decl : FUNCTION qualif . ftype ID $$4 eqbody  (13)

	STRING  shift 19
	NUMBER  shift 20
	ARRAY  shift 21
	VOID  shift 22
	.  error

	type  goto 23
	ftype  goto 24


state 14
	file : PROGRAM decls START . $$1 main END  (2)
	$$1 : .  (1)

	.  reduce 1

	$$1  goto 25


state 15
	gdecls : gdecls ';' . decl  (6)
	qualif : .  (27)

	error  shift 4
	PUBLIC  shift 5
	FORWARD  shift 6
	FUNCTION  shift 7
	STRING  reduce 27
	NUMBER  reduce 27
	ARRAY  reduce 27
	CONST  reduce 27

	decl  goto 26
	qualif  goto 11


state 16
	const : CONST .  (28)

	.  reduce 28


state 17
	decl : qualif const . vardecl  (8)

	STRING  shift 27
	NUMBER  shift 28
	ARRAY  shift 29
	.  error

	vardecl  goto 30


state 18
	file : MODULE decls END .  (3)

	.  reduce 3


state 19
	type : STRING .  (31)

	.  reduce 31


state 20
	type : NUMBER .  (30)

	.  reduce 30


state 21
	type : ARRAY .  (32)

	.  reduce 32


state 22
	ftype : VOID .  (34)

	.  reduce 34


state 23
	ftype : type .  (33)

	.  reduce 33


state 24
	decl : FUNCTION qualif ftype . ID $$2 fvars $$3 eqbody  (11)
	decl : FUNCTION qualif ftype . ID $$4 eqbody  (13)

	ID  shift 31
	.  error


state 25
	file : PROGRAM decls START $$1 . main END  (2)
	instrs : .  (64)

	STRING  shift 32
	NUMBER  shift 33
	ARRAY  shift 34
	INT  reduce 64
	CHAR  reduce 64
	ID  reduce 64
	STR  reduce 64
	END  reduce 64
	IF  reduce 64
	FOR  reduce 64
	'&'  reduce 64
	'~'  reduce 64
	'-'  reduce 64
	'?'  reduce 64
	'('  reduce 64

	fvar  goto 35
	fvars  goto 36
	instrs  goto 37
	main  goto 38


state 26
	gdecls : gdecls ';' decl .  (6)

	.  reduce 6


state 27
	vardecl : STRING . ID eqstr  (21)

	ID  shift 39
	.  error


state 28
	vardecl : NUMBER . ID eqint  (20)

	ID  shift 40
	.  error


state 29
	vardecl : ARRAY . ID vdim eqvec  (22)

	ID  shift 41
	.  error


state 30
	decl : qualif const vardecl .  (8)

	.  reduce 8


state 31
	decl : FUNCTION qualif ftype ID . $$2 fvars $$3 eqbody  (11)
	decl : FUNCTION qualif ftype ID . $$4 eqbody  (13)
	$$2 : .  (9)
	$$4 : .  (12)

	STRING  reduce 9
	NUMBER  reduce 9
	ARRAY  reduce 9
	DO  reduce 12
	DONE  reduce 12

	$$2  goto 42
	$$4  goto 43


state 32
	fvar : STRING . ID  (16)

	ID  shift 44
	.  error


state 33
	fvar : NUMBER . ID  (15)

	ID  shift 45
	.  error


state 34
	fvar : ARRAY . ID vdim  (17)

	ID  shift 46
	.  error


state 35
	fvars : fvar .  (18)

	.  reduce 18


state 36
	fvars : fvars . ';' fvar  (19)
	main : fvars . ';' instrs  (53)

	';'  shift 47
	.  error


state 37
	main : instrs .  (54)
	instrs : instrs . instr  (65)

	INT  shift 48
	CHAR  shift 49
	ID  shift 50
	STR  shift 51
	IF  shift 52
	FOR  shift 53
	'&'  shift 54
	'~'  shift 55
	'-'  shift 56
	'?'  shift 57
	'('  shift 58
	END  reduce 54

	lval  goto 59
	chars  goto 60
	char  goto 61
	instr  goto 62
	expr  goto 63


state 38
	file : PROGRAM decls START $$1 main . END  (2)

	END  shift 64
	.  error


state 39
	vardecl : STRING ID . eqstr  (21)
	eqstr : .  (38)

	EQ  shift 65
	END  reduce 38
	START  reduce 38
	';'  reduce 38

	eqstr  goto 66


state 40
	vardecl : NUMBER ID . eqint  (20)
	eqint : .  (35)

	EQ  shift 67
	END  reduce 35
	START  reduce 35
	';'  reduce 35

	eqint  goto 68


state 41
	vardecl : ARRAY ID . vdim eqvec  (22)
	vdim : .  (24)

	'['  shift 69
	END  reduce 24
	START  reduce 24
	EQ  reduce 24
	';'  reduce 24

	vdim  goto 70


state 42
	decl : FUNCTION qualif ftype ID $$2 . fvars $$3 eqbody  (11)

	STRING  shift 32
	NUMBER  shift 33
	ARRAY  shift 34
	.  error

	fvar  goto 35
	fvars  goto 71


state 43
	decl : FUNCTION qualif ftype ID $$4 . eqbody  (13)

	DO  shift 72
	DONE  shift 73
	.  error

	eqbody  goto 74


state 44
	fvar : STRING ID .  (16)

	.  reduce 16


state 45
	fvar : NUMBER ID .  (15)

	.  reduce 15


state 46
	fvar : ARRAY ID . vdim  (17)
	vdim : .  (24)

	'['  shift 69
	DO  reduce 24
	DONE  reduce 24
	';'  reduce 24

	vdim  goto 75


state 47
	fvars : fvars ';' . fvar  (19)
	main : fvars ';' . instrs  (53)
	instrs : .  (64)

	STRING  shift 32
	NUMBER  shift 33
	ARRAY  shift 34
	INT  reduce 64
	CHAR  reduce 64
	ID  reduce 64
	STR  reduce 64
	END  reduce 64
	IF  reduce 64
	FOR  reduce 64
	'&'  reduce 64
	'~'  reduce 64
	'-'  reduce 64
	'?'  reduce 64
	'('  reduce 64

	fvar  goto 76
	instrs  goto 77


state 48
	char : INT .  (42)

	.  reduce 42


state 49
	char : CHAR .  (43)

	.  reduce 43


state 50
	lval : ID .  (76)
	lval : ID . '[' expr ']'  (77)
	expr : ID . '(' exprs ')'  (100)

	'['  shift 78
	'('  shift 79
	END  reduce 76
	THEN  reduce 76
	FI  reduce 76
	ELIF  reduce 76
	ELSE  reduce 76
	START  reduce 76
	UNTIL  reduce 76
	STEP  reduce 76
	DO  reduce 76
	DONE  reduce 76
	EQ  reduce 76
	'|'  reduce 76
	'&'  reduce 76
	'='  reduce 76
	NE  reduce 76
	'<'  reduce 76
	'>'  reduce 76
	GE  reduce 76
	LE  reduce 76
	'+'  reduce 76
	'-'  reduce 76
	'*'  reduce 76
	'/'  reduce 76
	'%'  reduce 76
	'^'  reduce 76
	';'  reduce 76
	']'  reduce 76
	','  reduce 76
	'!'  reduce 76
	'#'  reduce 76
	')'  reduce 76


state 51
	char : STR .  (44)

	.  reduce 44


state 52
	instr : IF . expr THEN block elifs else FI  (66)

	INT  shift 48
	CHAR  shift 49
	ID  shift 50
	STR  shift 51
	'&'  shift 54
	'~'  shift 55
	'-'  shift 56
	'?'  shift 57
	'('  shift 58
	.  error

	lval  goto 80
	chars  goto 60
	char  goto 61
	expr  goto 81


state 53
	instr : FOR . expr UNTIL expr STEP expr DO $$5 block DONE  (68)

	INT  shift 48
	CHAR  shift 49
	ID  shift 50
	STR  shift 51
	'&'  shift 54
	'~'  shift 55
	'-'  shift 56
	'?'  shift 57
	'('  shift 58
	.  error

	lval  goto 80
	chars  goto 60
	char  goto 61
	expr  goto 82


state 54
	expr : '&' . lval  (81)

	ID  shift 83
	.  error

	lval  goto 84


state 55
	expr : '~' . expr  (97)

	INT  shift 48
	CHAR  shift 49
	ID  shift 50
	STR  shift 51
	'&'  shift 54
	'~'  shift 55
	'-'  shift 56
	'?'  shift 57
	'('  shift 58
	.  error

	lval  goto 80
	chars  goto 60
	char  goto 61
	expr  goto 85


state 56
	expr : '-' . expr  (98)

	INT  shift 48
	CHAR  shift 49
	ID  shift 50
	STR  shift 51
	'&'  shift 54
	'~'  shift 55
	'-'  shift 56
	'?'  shift 57
	'('  shift 58
	.  error

	lval  goto 80
	chars  goto 60
	char  goto 61
	expr  goto 86


state 57
	expr : '?' .  (80)

	.  reduce 80


state 58
	expr : '(' . expr ')'  (82)

	INT  shift 48
	CHAR  shift 49
	ID  shift 50
	STR  shift 51
	'&'  shift 54
	'~'  shift 55
	'-'  shift 56
	'?'  shift 57
	'('  shift 58
	.  error

	lval  goto 80
	chars  goto 60
	char  goto 61
	expr  goto 87


state 59
	instr : lval . '#' expr ';'  (71)
	expr : lval .  (79)
	expr : lval . EQ expr  (99)

	EQ  shift 88
	'#'  shift 89
	'|'  reduce 79
	'&'  reduce 79
	'='  reduce 79
	NE  reduce 79
	'<'  reduce 79
	'>'  reduce 79
	GE  reduce 79
	LE  reduce 79
	'+'  reduce 79
	'-'  reduce 79
	'*'  reduce 79
	'/'  reduce 79
	'%'  reduce 79
	'^'  reduce 79
	';'  reduce 79
	'!'  reduce 79


state 60
	chars : chars . char  (41)
	expr : chars .  (78)
